--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ReactJS</title>
+  <title>Facebook Clone</title>
 </head>
 
 <body>
-
   <div id="app"></div>
-
   <script src="./bundle.js"></script>
-
 </body>
 
 </html>
